--- a/static/css/sb-admin-2.css
+++ b/static/css/sb-admin-2.css
@@ -3,9 +3,10 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-body {
-  background-color: #f8f8f8;
-}
+ body {
+     font-family: 'Raleway', sans-serif;
+ }
+
 #wrapper {
   width: 100%;
 }
