--- a/templates/head.html
+++ b/templates/head.html
@@ -13,6 +13,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,700">
 
     <!-- MetisMenu CSS -->
     <link href="../static/metisMenu/metisMenu.min.css" rel="stylesheet">
