--- a/templates/index.html
+++ b/templates/index.html
@@ -132,7 +132,7 @@ table thead, table tbody tr {
                     <!-- /.panel -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i> Top 5 Instructors at 14th St Studio in May 2017
+                            <i class="fa fa-bar-chart-o fa-fw"></i> Top 5 Instructors at 14th St Studio
                             <div class="pull-right" style="margin-top: -6px;">
                                 <div class="btn-group">
                                     <button type="button" class="btn btn-outline btn-default dropdown-toggle" data-toggle="dropdown">
@@ -295,7 +295,7 @@ table thead, table tbody tr {
                 value: 270
             },
             {
-                label: "Glober",
+                label: "Glover",
                 value: 125
             },  {
                 label: "H",
@@ -307,7 +307,7 @@ table thead, table tbody tr {
     });
 
 
-    // Create the chart
+    // Create the bar chart
     Highcharts.chart('instructor-bar-chart', {
         chart: {
             type: 'column'
