--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 
 <style>
     body {
-        background: url("../static/img/bg.png") no-repeat center center fixed;
+        background: url("../static/img/bg.jpg") no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
