--- a/templates/head.html
+++ b/templates/head.html
@@ -11,6 +11,8 @@
 
     <title>Yogilytics Dashboard</title>
 
+    <link rel="shortcut icon" href="../static/img/favicon.ico">
+
     <!-- Bootstrap Core CSS -->
     <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,700">
