--- a/templates/head.html
+++ b/templates/head.html
@@ -22,14 +22,37 @@
 
     <!-- Custom CSS -->
     <link href="../static/css/sb-admin-2.css" rel="stylesheet">
-
-
+    <!-- HighCharts -->
+    <script src="../static/js/highcharts.js"></script>
+    <script src="https://code.highcharts.com/modules/data.js"></script>
+    <script src="https://code.highcharts.com/modules/drilldown.js"></script>
 
     <!-- Custom Fonts -->
     <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <!-- DataTables CSS -->
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="../static/metisMenu/metisMenu.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="../static/js/sb-admin-2.js"></script>
+
+    <!-- DataTables JavaScript -->
+    <script src="../static/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="../static/datatables-plugins/dataTables.bootstrap.min.js"></script>
+    <script src="../static/datatables-responsive/dataTables.responsive.js"></script>
+
+    <script>
+    $(window).load(function() {
+      $('body').removeClass('loading')
+      $(".preload").fadeOut("slow");;
+    });
+    </script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
