--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,3 +1,31 @@
+<style>
+.profile.clearfix{
+    margin-bottom: 10px;
+}
+.profile_pic {
+    width: 30%;
+    float: left;
+}
+.img-circle.profile_img {
+    width: 60%;
+    background: #fff;
+    margin-left: 25%;
+    z-index: 1000;
+    position: inherit;
+    margin-top: 10px;
+    border: 1px solid rgba(52,73,94,.44);
+    padding: 4px;
+}
+.img-circle {
+    border-radius: 50%;
+}
+.profile_info {
+    /*padding: 25px 10px 10px;*/
+    width: 65%;
+    float: left;
+}
+</style>
+
 <!-- Navigation -->
 <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
     <div class="navbar-header">
@@ -15,7 +43,9 @@
         <!-- /.dropdown -->
         <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
+                <!-- <i class="fa fa-user fa-fw"></i>  -->
+                <img style="width: 20px;height: 20px;border-radius: 50%;margin-right: 10px;" src="../static/img/yogadistrict.png"> YogaDistrict
+                <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-user">
                 <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
@@ -35,6 +65,16 @@
     <div class="navbar-default sidebar" role="navigation">
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
+                <div class="profile clearfix">
+                    <div class="profile_pic">
+                        <img src="../static/img/yogadistrict.png" alt="..." class="img-circle profile_img">
+                    </div>
+                    <div class="profile_info">
+                        <h3 style="font-size:20px">YogaDistrict</h3>
+                    </div>
+                </div>
+                <li>
+                </li>
                 <li>
                     <a href="#"><i class="fa fa-dashboard fa-fw"></i> Dashboards<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
@@ -42,15 +82,15 @@
                             <a href="#"><i class="fa fa-book fa-fw"></i> Instructors</a>
                         </li>
                         <li>
-                          <a href="#"><i class="fa fa-graduation-cap fa-fw"></i> Classes</a>
+                            <a href="#"><i class="fa fa-graduation-cap fa-fw"></i> Classes</a>
                         </li>
                         <li>
-                          <a href="#"><i class="fa fa-filter fa-fw"></i> Yogis</a>
+                            <a href="#"><i class="fa fa-filter fa-fw"></i> Yogis</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-upload fa-fw"></i> Upload CSV</a>
+                    <a href="#"><i class="fa fa-upload fa-fw"></i> Import Data</a>
                 </li>
                 <li>
                     <a href="#"><i class="fa fa-users fa-fw"></i> Run Promotions</a>
