--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -79,7 +79,7 @@
                     <a href="#"><i class="fa fa-dashboard fa-fw"></i> Dashboards<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
                         <li>
-                            <a href="#"><i class="fa fa-book fa-fw"></i> Instructors</a>
+                            <a href="/"><i class="fa fa-book fa-fw"></i> Instructors</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-graduation-cap fa-fw"></i> Classes</a>
@@ -90,8 +90,18 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-upload fa-fw"></i> Import Data</a>
+                  <a href="#"><i class="fa fa-upload fa-fw"></i> Import Data<span class="fa arrow"></span></a>
+                  <ul class="nav nav-second-level">
+                      <li>
+                          <a href="mind-body"><i class="fa fa-book fa-fw"></i> Mind Body</a>
+                      </li>
+                      <li>
+                          <a href="#"><i class="fa fa-file-excel-o fa-fw"></i> CSV Import</a>
+                      </li>
+                  </ul>
                 </li>
+
+
                 <li>
                     <a href="#"><i class="fa fa-users fa-fw"></i> Run Promotions</a>
                 </li>
