--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@ table thead, table tbody tr {
 </style>
 
 <div class="preload">
-  <img src="http://i.imgur.com/KUJoe.gif">
+  <img src="../static/img/loader.gif">
 </div>
 
 <body>
@@ -224,6 +224,7 @@ table thead, table tbody tr {
         $(this).addClass( "active" );
       }
     });
+
     $('.tab-pane').each(function(index, value) {
       if (index == '0') {
         $(this).addClass( "active in");
